Updated page names and links on homepage

--- a/index.html
+++ b/index.html
@@ -342,4 +342,17 @@
     <div class="contact-info" aria-label="Contact Information">
       <a href="https://wa.me/260776942402" class="contact-link" target="_blank" rel="noopener noreferrer" aria-label="Chat on WhatsApp">
         <svg class="contact-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#25D366" aria-hidden="true">
-          <path d="M20.52 3.48A11.893 11.893 0 0 0 3.48 20.52l-1.92 6.72 6.72-1.92A11.893 11.893 0 0 0 20.52 3.48zm-7.46 15.98
+          <path d="M20.52 3.48A11.893 11.893 0 0 0 3.48 20.52l-1.92 6.72 6.72-1.92A11.893 11.893 0 0 0 20.52 3.48zm-7.46 15.98c-1.26 0-2.44-.33-3.48-.9l-2.44 1.44 1.44-2.44a6.852 6.852 0 0 1-1.02-3.48c0-3.8 3.08-6.88 6.88-6.88 1.86 0 3.6.76 4.8 2.04a6.843 6.843 0 0 1 2.04 4.8c0 3.8-3.08 6.88-6.88 6.88z"/>
+        </svg>
+        WhatsApp
+      </a>
+      <a href="mailto:hb4life40@gmail.com" class="contact-link" aria-label="Send email">
+        <svg class="contact-icon" xmlns="http://www.w3.org/2000/svg" fill="#d62828" viewBox="0 0 24 24" aria-hidden="true">
+          <path d="M20 4H4c-1.11 0-2 .89-2 2v12c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V6c0-1.11-.89-2-2-2zM4 8l8 5 8-5v-2l-8 5-8-5v2z"/>
+        </svg>
+        Email
+      </a>
+    </div>
+  </div>
+</body>
+</html>
