--- a/4html.html
+++ b/4html.html
@@ -1,16 +1,325 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>HB Graphics Zambia | Contact</title>
-  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Anton&display=swap" rel="stylesheet" />
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: #f7f7f7;
+      color: #222;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      min-height: 100vh;
+      padding: 40px 20px;
+    }
+    .container {
+      background: white;
+      padding: 40px 50px;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      text-align: center;
+      max-width: 720px;
+      width: 100%;
+      position: relative;
+      overflow: hidden;
+    }
+    h2 {
+      font-family: 'Anton', sans-serif;
+      font-size: 3rem;
+      color: #d62828;
+      margin-bottom: 15px;
+      -webkit-text-stroke: 1px white;
+      text-stroke: 1px white;
+      filter: drop-shadow(1px 1px 1px rgba(0,0,0,0.15));
+      letter-spacing: 1.5px;
+      position: relative;
+      z-index: 2;
+    }
+    p {
+      font-size: 1.8rem;
+      font-weight: 700;
+      margin-bottom: 40px;
+      color: #333;
+      position: relative;
+      z-index: 2;
+    }
+    nav {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 25px;
+      margin-bottom: 40px;
+      position: relative;
+      z-index: 2;
+    }
+    nav .logo {
+      display: flex;
+      align-items: center;
+      gap: 18px;
+      margin-bottom: 20px;
+      justify-content: center;
+    }
+    nav .logo img {
+      max-width: 80px;
+      border-radius: 12px;
+      box-shadow: 0 6px 25px rgba(0, 0, 0, 0.12);
+      background: white;
+      padding: 6px;
+      transition: transform 0.3s ease;
+    }
+    nav .logo img:hover {
+      transform: scale(1.05) rotate(-2deg);
+    }
+    nav .logo h1 {
+      font-family: 'Anton', sans-serif;
+      font-size: 1.8rem;
+      color: #d62828;
+      -webkit-text-stroke: 0.7px white;
+      text-stroke: 0.7px white;
+      filter: drop-shadow(1px 1px 1px rgba(0,0,0,0.15));
+      margin: 0;
+    }
+    nav ul.nav-links {
+      list-style: none;
+      display: flex;
+      gap: 28px;
+      padding: 0;
+      margin: 0 0 30px 0;
+      justify-content: center;
+      width: 100%;
+    }
+    nav ul.nav-links li a {
+      text-decoration: none;
+      color: #d62828;
+      font-weight: 700;
+      font-size: 1.2rem;
+      padding: 10px 18px;
+      border-radius: 12px;
+      background: linear-gradient(145deg, #d62828, #a91f1f);
+      box-shadow:
+        0 0 8px 2px rgba(255 255 255 / 0.9),
+        0 0 20px 4px rgba(255 255 255 / 0.5);
+      transition:
+        transform 0.25s ease,
+        box-shadow 0.25s ease,
+        filter 0.25s ease;
+      user-select: none;
+      position: relative;
+      overflow: hidden;
+    }
+    nav ul.nav-links li a::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: -75%;
+      width: 50%;
+      height: 200%;
+      background: rgba(255 255 255 / 0.3);
+      transform: skewX(-20deg) translateY(-50%);
+      transition: left 0.7s ease;
+      filter: blur(15px);
+      z-index: 1;
+    }
+    nav ul.nav-links li a:hover::before {
+      left: 125%;
+    }
+    nav ul.nav-links li a:hover, nav ul.nav-links li a.active {
+      transform: translateY(-7px) scale(1.1);
+      box-shadow:
+        0 0 15px 5px rgba(255 255 255 / 1),
+        0 0 30px 8px rgba(255 255 255 / 0.8);
+      filter: brightness(1.1);
+      z-index: 2;
+      color: white;
+    }
+
+    .contact-info {
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      margin-bottom: 40px;
+      flex-wrap: wrap;
+      position: relative;
+      z-index: 2;
+    }
+    .btn {
+      background: linear-gradient(145deg, #d62828, #a91f1f);
+      color: white;
+      font-weight: 700;
+      font-size: 1.2rem;
+      padding: 16px 40px;
+      border-radius: 14px;
+      border: none;
+      cursor: pointer;
+      box-shadow:
+        0 0 10px 3px rgba(255 255 255 / 0.9),
+        0 0 25px 6px rgba(255 255 255 / 0.5);
+      transition:
+        transform 0.25s ease,
+        box-shadow 0.25s ease,
+        filter 0.25s ease;
+      text-decoration: none;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      user-select: none;
+      position: relative;
+      overflow: hidden;
+    }
+    .btn::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: -75%;
+      width: 50%;
+      height: 200%;
+      background: rgba(255 255 255 / 0.3);
+      transform: skewX(-20deg) translateY(-50%);
+      transition: left 0.7s ease;
+      filter: blur(15px);
+      z-index: 1;
+    }
+    .btn:hover::before {
+      left: 125%;
+    }
+    .btn:hover {
+      transform: translateY(-7px) scale(1.1);
+      box-shadow:
+        0 0 20px 6px rgba(255 255 255 / 1),
+        0 0 40px 12px rgba(255 255 255 / 0.8);
+      filter: brightness(1.1);
+      z-index: 2;
+      text-decoration: none;
+      color: white;
+    }
+
+    form {
+      max-width: 600px;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      gap: 25px;
+      position: relative;
+      z-index: 2;
+    }
+    input[type="text"],
+    input[type="email"],
+    textarea {
+      padding: 14px 20px;
+      font-size: 1.1rem;
+      border-radius: 12px;
+      border: 2px solid #d62828;
+      outline: none;
+      resize: vertical;
+      font-family: 'Poppins', sans-serif;
+      transition: box-shadow 0.3s ease;
+    }
+    input[type="text"]:focus,
+    input[type="email"]:focus,
+    textarea:focus {
+      box-shadow: 0 0 12px 3px #d62828;
+      border-color: #a91f1f;
+    }
+    textarea {
+      min-height: 120px;
+    }
+    button[type="submit"] {
+      background: linear-gradient(145deg, #d62828, #a91f1f);
+      color: white;
+      font-weight: 700;
+      font-size: 1.3rem;
+      padding: 16px 0;
+      border-radius: 14px;
+      border: none;
+      cursor: pointer;
+      box-shadow:
+        0 0 15px 5px rgba(255 255 255 / 0.9),
+        0 0 35px 9px rgba(255 255 255 / 0.5);
+      transition:
+        transform 0.25s ease,
+        box-shadow 0.25s ease,
+        filter 0.25s ease;
+      user-select: none;
+      position: relative;
+      overflow: hidden;
+    }
+    button[type="submit"]::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: -75%;
+      width: 50%;
+      height: 200%;
+      background: rgba(255 255 255 / 0.3);
+      transform: skewX(-20deg) translateY(-50%);
+      transition: left 0.7s ease;
+      filter: blur(15px);
+      z-index: 1;
+    }
+    button[type="submit"]:hover::before {
+      left: 125%;
+    }
+    button[type="submit"]:hover {
+      transform: translateY(-7px) scale(1.1);
+      box-shadow:
+        0 0 20px 6px rgba(255 255 255 / 1),
+        0 0 45px 15px rgba(255 255 255 / 0.8);
+      filter: brightness(1.1);
+      z-index: 2;
+    }
+
+    footer {
+      margin-top: 60px;
+      text-align: center;
+      font-size: 1rem;
+      font-weight: 600;
+      color: #666;
+      user-select: none;
+      position: relative;
+      z-index: 2;
+    }
+
+    @media (max-width: 640px) {
+      .container {
+        padding: 30px 20px;
+      }
+      nav ul.nav-links {
+        flex-direction: column;
+        gap: 15px;
+      }
+      .contact-info {
+        flex-direction: column;
+        gap: 20px;
+      }
+      form {
+        width: 100%;
+        gap: 18px;
+      }
+      input[type="text"],
+      input[type="email"],
+      textarea {
+        font-size: 1rem;
+      }
+      button[type="submit"] {
+        font-size: 1.1rem;
+        padding: 14px 0;
+      }
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <nav>
+  <div class="container" role="main" aria-label="HB Graphics Contact Page">
+    <nav aria-label="Primary navigation">
       <div class="logo">
-        <img src="logo.png.jpeg" alt="HB Graphics Logo"width='1000'>
+        <img src="logo.png.jpeg" alt="HB Graphics Logo" />
         <h1>HB Graphics Zambia</h1>
       </div>
       <ul class="nav-links">
@@ -20,27 +329,25 @@
         <li><a href="contact.html" class="active">Contact</a></li>
       </ul>
     </nav>
-  </header>
 
-  <section class="contact">
     <h2>Contact Us</h2>
     <p>Let’s work together on your next project!</p>
 
     <div class="contact-info">
-      <a href="https://wa.me/260776942402" class="btn">Chat on WhatsApp</a>
-      <a href="mailto:hbforlife40@gmail.com" class="btn">Send Email</a>
+      <a href="https://wa.me/260776942402" class="btn" target="_blank" rel="noopener noreferrer" aria-label="Chat on WhatsApp">Chat on WhatsApp</a>
+      <a href="mailto:hbforlife40@gmail.com" class="btn" aria-label="Send Email">Send Email</a>
     </div>
 
-    <form action="#" method="post">
-      <input type="text" placeholder="Your Name" required>
-      <input type="email" placeholder="Your Email" required>
-      <textarea placeholder="Your Message" rows="5" required></textarea>
-      <button type="submit" class="btn">Send Message</button>
+    <form action="#" method="post" aria-label="Contact form">
+      <input type="text" placeholder="Your Name" required aria-required="true" />
+      <input type="email" placeholder="Your Email" required aria-required="true" />
+      <textarea placeholder="Your Message" rows="5" required aria-required="true"></textarea>
+      <button type="submit">Send Message</button>
     </form>
-  </section>
 
-  <footer>
-    <p>© 2025 HB Graphics Zambia. All Rights Reserved.</p>
-  </footer>
+    <footer>
+      <p>© 2025 HB Graphics Zambia. All Rights Reserved.</p>
+    </footer>
+  </div>
 </body>
 </html>
