--- a/4html.html
+++ b/4html.html
@@ -87,60 +87,6 @@
       filter: drop-shadow(1px 1px 1px rgba(0,0,0,0.15));
       margin: 0;
     }
-    nav ul.nav-links {
-      list-style: none;
-      display: flex;
-      gap: 28px;
-      padding: 0;
-      margin: 0 0 30px 0;
-      justify-content: center;
-      width: 100%;
-    }
-    nav ul.nav-links li a {
-      text-decoration: none;
-      color: #d62828;
-      font-weight: 700;
-      font-size: 1.2rem;
-      padding: 10px 18px;
-      border-radius: 12px;
-      background: linear-gradient(145deg, #d62828, #a91f1f);
-      box-shadow:
-        0 0 8px 2px rgba(255 255 255 / 0.9),
-        0 0 20px 4px rgba(255 255 255 / 0.5);
-      transition:
-        transform 0.25s ease,
-        box-shadow 0.25s ease,
-        filter 0.25s ease;
-      user-select: none;
-      position: relative;
-      overflow: hidden;
-    }
-    nav ul.nav-links li a::before {
-      content: '';
-      position: absolute;
-      top: 50%;
-      left: -75%;
-      width: 50%;
-      height: 200%;
-      background: rgba(255 255 255 / 0.3);
-      transform: skewX(-20deg) translateY(-50%);
-      transition: left 0.7s ease;
-      filter: blur(15px);
-      z-index: 1;
-    }
-    nav ul.nav-links li a:hover::before {
-      left: 125%;
-    }
-    nav ul.nav-links li a:hover, nav ul.nav-links li a.active {
-      transform: translateY(-7px) scale(1.1);
-      box-shadow:
-        0 0 15px 5px rgba(255 255 255 / 1),
-        0 0 30px 8px rgba(255 255 255 / 0.8);
-      filter: brightness(1.1);
-      z-index: 2;
-      color: white;
-    }
-
     .contact-info {
       display: flex;
       justify-content: center;
@@ -200,7 +146,6 @@
       text-decoration: none;
       color: white;
     }
-
     form {
       max-width: 600px;
       margin: 0 auto;
@@ -275,7 +220,6 @@
       filter: brightness(1.1);
       z-index: 2;
     }
-
     footer {
       margin-top: 60px;
       text-align: center;
@@ -286,14 +230,9 @@
       position: relative;
       z-index: 2;
     }
-
     @media (max-width: 640px) {
       .container {
         padding: 30px 20px;
-      }
-      nav ul.nav-links {
-        flex-direction: column;
-        gap: 15px;
       }
       .contact-info {
         flex-direction: column;
@@ -322,12 +261,7 @@
         <img src="logo.png.jpeg" alt="HB Graphics Logo" />
         <h1>HB Graphics Zambia</h1>
       </div>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact.html" class="active">Contact</a></li>
-      </ul>
+      <!-- Navigation links removed as requested -->
     </nav>
 
     <h2>Contact Us</h2>
